fix: /uses page on mobile

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -49,7 +49,7 @@ header {
   font-size: 18px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 450px) {
   .site-nav {
     position: absolute;
     top: 9px;
